# joule-profiler

./: .gitignore  Cargo.toml  README.md  install.sh
cli/: CHANGELOG.md  Cargo.toml
cli/src/: lib.rs
cli/src/commands/: mod.rs
core/: CHANGELOG.md  Cargo.toml
core/src/: lib.rs
core/src/aggregate/: metric.rs
core/src/profiler/: error.rs  mod.rs
core/src/source/: types.rs
examples/programs/: gpu.py  mandelbrot_nvidia.cu  nbody.c  nbody.py
joss/: Makefile
joss/paper/: paper.bib  paper.md
sources/amdsmi/: Cargo.toml  README.md
sources/amdsmi/src/: config.rs  counters.rs  error.rs  hardware.rs  lib.rs
sources/cgroup/: Cargo.toml  README.md
sources/cgroup/src/: cgroup.rs  config.rs  counters.rs  error.rs  lib.rs  snapshot.rs  util.rs
sources/nvml/: CHANGELOG.md  Cargo.toml  README.md
sources/perf_event/: CHANGELOG.md  Cargo.toml  README.md
sources/procfs/: Cargo.toml
sources/procfs/src/: config.rs  counters.rs  error.rs  lib.rs  snapshot.rs  utils.rs
sources/rapl/: CHANGELOG.md  Cargo.toml  README.md
